Pirate Race: fix no-branding "i" z-index

--- a/templates/pirateRace/src/less/pirateRace.less
+++ b/templates/pirateRace/src/less/pirateRace.less
@@ -211,7 +211,7 @@ a:active, a.emulate-active {
     .centralizedCoveringBackground;
 }
 
-.soombot{
+.soombot, .nobrand {
     z-index:2001;
 }
 
@@ -566,3 +566,4 @@ a:active, a.emulate-active {
     33% {-webkit-transform: rotate(0deg) scale(1.1);}
     66% {-webkit-transform: rotate(1deg) scale(1);}
 }
+
